k8s-manifests/cache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
      spec:
        containers:
          - name: cache-container
            image: redis:latest
            ports:
              - containerPort: 6379
